crates/musli-tests/tests/ui/transparent_error.stderr
error: #[musli(transparent)] can only be used on types which have a single field
 --> tests/ui/transparent_error.rs:3:10
  |
3 | #[derive(Encode, Decode)]
  |          ^^^^^^
  |
  = note: this error originates in the derive macro `Encode` (in Nightly builds, run with -Z macro-backtrace for more info)

error: #[musli(transparent)] can only be used on types which have a single field
 --> tests/ui/transparent_error.rs:3:18
  |
3 | #[derive(Encode, Decode)]
  |                  ^^^^^^
  |
  = note: this error originates in the derive macro `Decode` (in Nightly builds, run with -Z macro-backtrace for more info)

error: #[musli(transparent)] can only be used on types which have a single field
  --> tests/ui/transparent_error.rs:10:10
   |
10 | #[derive(Encode, Decode)]
   |          ^^^^^^
   |
   = note: this error originates in the derive macro `Encode` (in Nightly builds, run with -Z macro-backtrace for more info)

error: #[musli(transparent)] can only be used on types which have a single field
  --> tests/ui/transparent_error.rs:10:18
   |
10 | #[derive(Encode, Decode)]
   |                  ^^^^^^
   |
   = note: this error originates in the derive macro `Decode` (in Nightly builds, run with -Z macro-backtrace for more info)

error: #[musli(transparent)] types must have a single field
  --> tests/ui/transparent_error.rs:14:10
   |
14 | #[derive(Encode, Decode)]
   |          ^^^^^^
   |
   = note: this error originates in the derive macro `Encode` (in Nightly builds, run with -Z macro-backtrace for more info)

error: #[musli(transparent)] types must have a single field
  --> tests/ui/transparent_error.rs:14:18
   |
14 | #[derive(Encode, Decode)]
   |                  ^^^^^^
   |
   = note: this error originates in the derive macro `Decode` (in Nightly builds, run with -Z macro-backtrace for more info)

error: #[musli(transparent)] types must have a single field
  --> tests/ui/transparent_error.rs:18:10
   |
18 | #[derive(Encode, Decode)]
   |          ^^^^^^
   |
   = note: this error originates in the derive macro `Encode` (in Nightly builds, run with -Z macro-backtrace for more info)

error: #[musli(transparent)] types must have a single field
  --> tests/ui/transparent_error.rs:18:18
   |
18 | #[derive(Encode, Decode)]
   |                  ^^^^^^
   |
   = note: this error originates in the derive macro `Decode` (in Nightly builds, run with -Z macro-backtrace for more info)

error: #[musli(transparent)] can only be used on types which have a single field
  --> tests/ui/transparent_error.rs:24:5
   |
24 |     #[musli(transparent)]
   |     ^

error: #[musli(transparent)] can only be used on types which have a single field
  --> tests/ui/transparent_error.rs:29:5
   |
29 |     #[musli(transparent)]
   |     ^

error: #[musli(transparent)] types must have a single field
  --> tests/ui/transparent_error.rs:31:5
   |
31 |     #[musli(transparent)]
   |     ^

error: #[musli(transparent)] types must have a single field
  --> tests/ui/transparent_error.rs:33:5
   |
33 |     #[musli(transparent)]
   |     ^
